Update Machine Learning Coursework.ipynb

--- a/Machine Learning Coursework.ipynb
+++ b/Machine Learning Coursework.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Coursework 1 - Student Number 200546665 "
+    "# Machine Learning Coursework "
    ]
   },
   {
